feat: create send password recovery route and add it to swagger
